updated bugfix in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RR Technosoft</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .content {
+            padding: 20px;
+        }
+        .course {
+            margin-bottom: 20px;
+        }
+        .course img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 10px 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>RR Technosoft</h1>
+    </header>
+    <div class="content">
+        <h2>DevOps Courses</h2>
+        <div class="course">
+            <h3>Introduction to DevOps</h3>
+            <p>Learn the basics of DevOps, including CI/CD, version control, and automation tools.</p>
+            <img src="education1.jpg" alt="Introduction to DevOps">
+        </div>
+        <div class="course">
+            <h3>Advanced DevOps Practices</h3>
+            <p>Master advanced topics like Kubernetes, Docker, and cloud infrastructure management.</p>
+            <img src="education2.jpg" alt="Advanced DevOps Practices">
+        </div>
+        <div class="course">
+            <h3>DevOps Tools and Technologies</h3>
+            <p>Get hands-on experience with Jenkins, Ansible, Terraform, and more.</p>
+            <img src="education3.jpg" alt="DevOps Tools and Technologies">
+        </div>
+    </div>
+</body>
+</html>
